# lixpi

./: .gitignore  .gitmodules  AGENTS.md  README.md  docker-compose.yml  pnpm-workspace.yaml
.github/skills/github-workflow/: SKILL.md
.github/skills/project-navigation/: SKILL.md
documentation/: ARCHITECTURE.md  DEVELOPMENT.md  INFRASTRUCTURE-AND-DEPLOYMENT.md
documentation/coding-style-guides/: TYPESCRIPT.md
documentation/features/: CANVAS-ENGINE.md  WORKSPACE-EXPORT.md  WORKSPACE-FEATURE.md
documentation/knowledge/: INTERNAL-SERVICE-NATS-AUTH-PATTERN.md  RENDERING-ARCHITECTURE-FOR-MEDIA-HEAVY-CANVAS.md  WHY-DIFFERENT-MODEL-COMBINATIONS-PRODUCE-DIFFERENT-STYLES.md
documentation/third-party-documentation/xyflow/: MAINTENANCE-AGENT-INSTRUCTIONS.md
documentation/vendor-documentation/xyflow/: MAINTENANCE-AGENT-INSTRUCTIONS.md  overview.md
gui/tauri/: .gitignore  README.md  package.json
gui/tauri/src-tauri/: Cargo.toml  tauri.conf.json
gui/tauri/src-tauri/capabilities/: default.json
gui/tauri/src-tauri/src/: lib.rs  main.rs
infrastructure/init-script/: README.md  setup-env.ts
infrastructure/init-script/templates/: env.template
infrastructure/pulumi/src/: pulumiProgram.ts
random-useful-things/image-color-analysis-tool/: ADVANCED-GRADIENT-COLOR-ANALYSIS.md  REGION-GRADIENT-PREVIEW.md  region-gradient-preview.html
services/api/: package.json
services/api/src/: server.ts
services/llm-api/: README.md
services/llm-api/src/: config.py  main.py
services/web-ui/: index.html  package.json  vite.config.ts
services/web-ui/src/: main.ts  (+4 more)
(+120 files in other folders)
