[package]
name = "lixpi"
version = "0.0.1"
description = "Lixpi native app"
authors = ["Lixpi"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lixpi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
